# training-app

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
apps/accounts/: admin.py  forms.py  middleware.py  models.py  urls.py  views.py
apps/accounts/management/commands/: setup_demo.py
apps/accounts/migrations/: 0001_initial.py  0002_ftp_and_weight_history.py  0003_resting_hr.py
apps/devices/: urls.py  views.py
apps/devices/generators/: __init__.py  erg.py  fit.py  zwo.py
apps/difficulty/: apps.py  predict.py
apps/fatigue/: apps.py  banister.py  hr.py  power.py  queries.py  urls.py  views.py
apps/integrations/: activity_views.py  admin.py  models.py  urls.py  views.py
apps/integrations/migrations/: 0001_initial.py  0002_effort_and_power_data.py  0003_hr_data_and_hr_tss.py
apps/integrations/strava/: client.py  urls.py  views.py
apps/mock_strava/: apps.py  models.py  urls.py  views.py
apps/plans/: admin.py  models.py  progressions.py  urls.py  views.py
apps/plans/management/commands/: seed_plans.py
apps/plans/migrations/: 0001_initial.py  0002_intended_effort.py
apps/scheduler/: admin.py  models.py  queries.py  urls.py  views.py
apps/scheduler/migrations/: 0001_initial.py
config/: settings.py  urls.py
static/css/: style.css
templates/: base.html  dashboard.html
templates/accounts/: ftp_history.html  ftp_history_edit.html  login.html  profile.html  register.html
templates/fatigue/: dashboard.html
templates/integrations/: activity_detail.html  home.html
templates/plans/: detail.html  list.html  workout_detail.html
templates/scheduler/: calendar.html  populate_confirm.html
tests/e2e/: conftest.py  test_auth_flow.py  test_plan_flow.py  test_workout_flow.py
tests/integration/: conftest.py  test_mock_strava_with_stravalib.py  test_strava_integration.py
tests/unit/: test_banister.py  test_difficulty.py  test_generators.py  test_hr.py  test_models.py  test_power.py  test_progressions.py
tests/views/: test_activity_detail.py  test_auth.py  test_demo.py  test_fatigue.py  test_ftp_history.py  test_plans.py  test_scheduler.py
